Add per-guild settings support and update commands, embeds, and services for multi-guild compatibility
- Implement get_guild, get_guild_int, get_guild_bool in settings for per-guild config
- Add guild override loading and management in settings
- Refactor all services, listeners, and embeds to use per-guild settings where applicable
- Update forum log service and moderation logging to support multi-guild operation
- Enhance presence rotation with more detailed stats and multi-guild awareness
- Add application panel command and improve application handling for guild context
- Update command descriptions with icons and improved formatting
- Update config example for new structure and news config
- Add httpx to requirements

--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -1,5 +1,4 @@
 bot:
-  guild_id:
   token: "0"
   forum_channel_id:
   log_forum_channel_id:
@@ -9,11 +8,23 @@ bot:
   dashboard:
     host: "0.0.0.0"
     port: 8787
-    token: "change-me-now"
+    client_id: ""
+    client_secret: ""
+    redirect_uri: "http://localhost:8787/oauth/callback"
 
 
 logs:
   enabled: true
+
+
+news:
+  enabled: true
+  channel_id: 0
+  ping_role_id: 0
+  interval_minutes: 30
+  api_url: "https://www.tagesschau.de/api2u/news"
+  last_posted_id:
+  last_posted_at:
 
 
 ticket:
