--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ uvicorn[standard]==0.40.0
 PyYAML==6.0.3
 aiosqlite==0.22.1
 python-dotenv==1.2.1
+httpx==0.27.2
 audioop-lts; python_version>='3.13'
